New features and bugs fixed: - Implemented jquery ui autocomplete control - BUG: Server: first word return multiple arrays instead of 1 array - multiple words - BUG: Server: log leftover removed.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>WordPrediction</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/jquery-ui.css">
 </head>
 
 <body>
@@ -14,7 +15,10 @@
     <div id="predictions"></div>
 
     <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/suggestions.js"></script>
     <script src="js/communication.js"></script>
+
 </body>
 
 </html>
